@@ -1,4 +1,5 @@
 
+	* make torrent_handler::set_priority() to use peer_classes
 	* fix support for boost-1.66 (requires C++11)
 	* fix i2p support
 	* fix loading resume data when in seed mode
